-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
Service Arch 2022-11-14
-
160
-
None
-
None
-
None
-
None
-
None
-
None
-
None
ONLY on macOS it is not monotonic, and this has caused BFs and unpleasant surprises.
https://jira.mongodb.org/browse/BF-26765
https://jira.mongodb.org/browse/SERVER-63651
This isn't hard to fix, and it's very hard to work around it.
We can use std::chrono::steady_clock if implementations meet our needs,
or the macOS mach_absolute_time library https://developer.apple.com/library/archive/qa/qa1398/_index.html
We need the consistent ability to measure small durations to implement fine-grained observability of latencies in the server (PM-2398, INIT-6).