SERVER-70941 system TickSource via std::chrono::steady_clock